public class Cliente {

    public static void main(String[] args) {
        Restaurante restaurante = new Restaurante();
        restaurante.abrir();
    }
}