@startuml
' Propuesta de organización del programa

' Paquetes (opcional, para agrupar lógicamente)
package "Simulación" {
  class Simulador {
    - supermercado: Supermercado
    - hora: Hora
    + Simulador(horaInicio: int, horaFin: int)
    + iniciarSimulacion(): void
    - generarLlegadaCliente(): void
    - asignarClienteACaja(): void
    - atenderCajas(): void
    - mostrarEstado(): void
  }

  class Supermercado {
    - cajas: Caja[]
    - cola: Cola
    - PROBABILIDAD_DE_QUE_LLEGUE_ALGUIEN: double
    + Supermercado(numeroCajas: int)
    + añadirClienteACola(): void
    + intentarPasarClienteACaja(): boolean
    + atenderCajas(): void
    + getEstadoCola(): String
    + getEstadoCajas(): String
  }
}

package "Entidades Base" {
  class Caja {
    - ocupada: boolean
    - paquetes: int
    + vacia(): boolean
    + añadirPaquetes(cantidad: int): void
    + pasar(): void
    + atender(): void
    + getEstado(): String
  }

  class Cola {
    - cantidad: int
    + vacia(): boolean
    + sacar(): void
    + poner(): void
    + getCantidad(): int
    + getEstado(): String
  }

  class Hora {
    - horaActual: int
    - horaFin: int
    + Hora(inicio: int, fin: int)
    + terminado(): boolean
    + avanzar(): void
    + getEstado(): String
  }
}

package "Utilidades" {
  class Utilidades {
    + doubleAleatorio(): double
    + aleatorioEntre(rango: int[]): int
    + limpiarConsola(): void
    + divisor(x: String): void
  }
}

' Clase principal
class Cliente {
  + main(args: String[]): void
}

' Relaciones
Cliente --> Simulador : crea y inicia
Simulador --> Supermercado : gestiona
Simulador --> Hora : gestiona
Simulador ..> Utilidades : usa

Supermercado *-- Caja : contiene (array)
Supermercado *-- Cola : contiene
Supermercado ..> Utilidades : usa (para aleatorios)

Cola ..> Caja : (implícitamente, al sacar cliente para una caja)
Caja ..> Utilidades : (implícitamente, para constantes de visualización)

@enduml